--- a/.github/workflows/ex8_wf1.yml
+++ b/.github/workflows/ex8_wf1.yml
@@ -16,6 +16,7 @@ jobs:
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
   example-job:
+    name: Save output
     runs-on: ubuntu-latest
     steps:
       - shell: bash
