--- a/.github/workflows/ex8_wf1.yml
+++ b/.github/workflows/ex8_wf1.yml
@@ -15,7 +15,7 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
-      
+
   example-job:
     name: Save output
     runs-on: ubuntu-latest
@@ -39,4 +39,4 @@ jobs:
           name: output-log-file
       - shell: bash
         run: |
-         	ls output-log-file
+         	ls output.log
