--- a/.github/workflows/ex8_wf1.yml
+++ b/.github/workflows/ex8_wf1.yml
@@ -32,7 +32,7 @@ jobs:
   example-job10:
     name: Open output
     runs-on: ubuntu-latest
-    needs: example-job
+    #needs: example-job
     steps:
       - name: Download a single artifact
         uses: actions/download-artifact@v3
