--- a/.github/workflows/ex12_wf2.yml
+++ b/.github/workflows/ex12_wf2.yml
@@ -16,4 +16,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: msg
-        run: echo "Invoked by dispatch_workflow"
+        run: echo "Invoked by dispatch workflow"
