--- a/.github/workflows/ex12_wf1.yml
+++ b/.github/workflows/ex12_wf1.yml
@@ -6,4 +6,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: msg
-        run: echo "Invoked by call_workflow"
+        run: echo "Invoked by dispatch workflow"
