--- a/.github/workflows/ex12_wf2.yml
+++ b/.github/workflows/ex12_wf2.yml
@@ -9,8 +9,8 @@ on:
   # Dependency to a forking workflow
   workflow_run:
     workflows: ["dispatch workflow"]
-    type:
-      - complete
+    types:
+      - completed
 jobs:
   say_hi:
     runs-on: ubuntu-latest
