adding required properties

--- a/.github/workflows/ex12_wf2.yml
+++ b/.github/workflows/ex12_wf2.yml
@@ -4,6 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       message:
+        required: false
         description: 'call from ui'
 
   # Dependency to a forking workflow
