--- a/.github/workflows/ex13_wf1.yml
+++ b/.github/workflows/ex13_wf1.yml
@@ -1,18 +1,43 @@
-name: test variables workflow
+# name: test variables workflow
+# on:
+#   workflow_dispatch
+# env:
+#   ## Sets environment variable
+#   GITHUB_ENV: hi   
+# jobs:
+#   initialize_variable:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: setvar
+#         run: echo "SOMEVAR=hello" > $GITHUB_ENV
+#   use_variable:
+#     runs-on: ubuntu-latest
+#     needs: initialize_variable
+#     steps:
+#       - name: usevar
+#         run: echo "var is:$GITHUB_ENV"
+
+name: env_tutorial
 on:
   workflow_dispatch
+
 env:
   ## Sets environment variable
-  GITHUB_ENV: hi   
+  API_KEY: HI    
+
 jobs:
-  initialize_variable:
+  job1:
+    ## The type of runner that the job will run on, 
+    ## here it runs on ubuntu latest
+    runs-on: ubuntu-latest 
+    steps:
+      - name: step 1
+        ## Reference your environment variables
+        run: echo "The API key is:${{env.API_KEY}}"   
+
+  job2:
     runs-on: ubuntu-latest
     steps:
-      - name: setvar
-        run: echo "SOMEVAR=hello" > $GITHUB_ENV
-  use_variable:
-    runs-on: ubuntu-latest
-    needs: initialize_variable
-    steps:
-      - name: usevar
-        run: echo "var is:$GITHUB_ENV"
+      - name: step 1
+        ## Another way reference your environment variables
+        run: echo "The API key is:$API_KEY"
