--- a/.github/workflows/ex13_wf1.yml
+++ b/.github/workflows/ex13_wf1.yml
@@ -5,7 +5,8 @@ env:
   SOMEVAR: Test
 jobs:
   initialize_variable:
-    runs-on: ubuntu-latest
+    #runs-on: ubuntu-latest
+    runs-on: self-hosted
     outputs:
       output1: ${{ steps.step3.outputs.o1 }}
     steps:
@@ -19,7 +20,8 @@ jobs:
         id: step3
         run: echo "::set-output name=o1::${{ env.SOMEVAR }}"	
   use_variable:
-    runs-on: ubuntu-latest
+    #runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: initialize_variable
     steps:
       - name: useenvvar
